--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ header {
 
 /* Para evitar que el contenido quede tapado por el header */
 main {
-  margin-top: 150px;      /* Ajustá el valor según la altura de tu navbar */
+  margin-top: 100px;      /* Ajustá el valor según la altura de tu navbar */
 }
 
 /* Header sin logo (solo en index.html) */
@@ -47,7 +47,7 @@ main {
 
 .navbar-nav .nav-link {
   color: #fff !important;
-  font-weight: 500;
+  font-weight: 60px;
   transition: 0.3s;
 }
 
