--- a/scss/main.scss
+++ b/scss/main.scss
@@ -122,9 +122,9 @@ main {
     text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.6);
   }
 
-  &.banner-dulce { background-image: url('../imagenes/banner-dulce-frutas.png'); }
-  &.banner-salado { background-image: url('../imagenes/banner-salados-verdura.png'); }
-  &.banner-contacto { background-image: url('../imagenes/banner-arcoiris.png'); }
+  &.banner-dulce-frutas { background-image: url('../imagenes/banner-dulce-frutas.png'); }
+  &.banner-salados-verdura { background-image: url('../imagenes/banner-salados-verdura.png'); }
+  &.banner-arcoiris { background-image: url('../imagenes/banner-arcoiris.png'); }
 }
 
 /* ================== CARDS ================== */
