v17 10 v1 arreglos html y scss

--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,7 @@
 @charset "UTF-8";
-/*==========SCSS====================*/
 /* =========================================================
    TIERRA VIVA - main.scss
-   Paleta y estilo base con variables Sass
+   Paleta, estilo base y estructura general
    ========================================================= */
 /* 🎨 VARIABLES */
 /* ================== BODY ================== */
@@ -21,14 +20,17 @@ header {
   left: 0;
   width: 100%;
   z-index: 1000;
+  background-color: #5B8C5A;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
 }
-header.header-sin-logo, header.header-con-logo {
-  background-color: #5B8C5A;
-}
 
+/* Deja espacio para el header fijo */
 main {
   margin-top: 100px;
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
 }
 
 /* ================== NAV ================== */
@@ -80,9 +82,7 @@ main {
   padding: 20px;
 }
 .contenido p {
-  font-family: "Lato", sans-serif;
   font-size: 1.2rem;
-  color: #3C3C3C;
   line-height: 1.5;
   text-align: justify;
 }
@@ -96,6 +96,7 @@ main {
   padding-left: 50px;
   background-size: cover;
   background-position: center left;
+  justify-content: flex-start;
 }
 .banner-general h2 {
   color: white;
@@ -103,13 +104,13 @@ main {
   font-weight: 700;
   text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.6);
 }
-.banner-general.banner-dulce-frutas {
+.banner-general.banner-dulce {
   background-image: url("../imagenes/banner-dulce-frutas.png");
 }
-.banner-general.banner-salados-verdura {
+.banner-general.banner-salado {
   background-image: url("../imagenes/banner-salados-verdura.png");
 }
-.banner-general.banner-arcoiris {
+.banner-general.banner-contacto {
   background-image: url("../imagenes/banner-arcoiris.png");
 }
 
@@ -165,6 +166,8 @@ main {
 .formulario {
   border: 2px solid #5B8C5A;
   background-color: white;
+  border-radius: 10px;
+  padding: 20px;
 }
 .formulario label {
   color: #3C3C3C;
@@ -185,6 +188,7 @@ main {
 footer {
   background-color: #5B8C5A;
   color: white;
+  padding: 20px;
 }
 footer img.logo-pie {
   height: 120px;
