--- a/scss/main.scss
+++ b/scss/main.scss
@@ -46,6 +46,11 @@ main {
   height: 60px;
 }
 
+.navbar {
+  background-color: #5B8C5A; // Verde Tierra Viva
+}
+
+
 .navbar-nav {
   .nav-link {
     color: #fff !important;
@@ -115,7 +120,7 @@ main {
   background-position: center left;
  
 
-  h2 {
+  h1 {
     color: white;
     font-size: 2.2rem;
     font-weight: 700;
@@ -174,7 +179,7 @@ main {
   background-color: rgba(91, 140, 90, 0.6);
   border-radius: 10px;
 
-  h5 {
+  h3 {
     color: $dorado;
     font-weight: bold;
     text-shadow: 1px 1px 3px black;
@@ -235,6 +240,7 @@ main {
 } 
 /* ================== FOOTER ================== */
 footer {
+  position: relative; 
   background-color: $verde;
   color: white;
   text-align: center;
@@ -250,17 +256,35 @@ footer {
     margin-bottom: 10px;
   }
 
+  // Íconos centrados
   .redes {
     display: flex;
     justify-content: center;
     gap: 25px;
+    margin-bottom: 15px;
 
-    img {
+    a img {
       width: 32px;
       transition: transform 0.3s ease;
 
       &:hover {
         transform: scale(1.2);
+      }
+    }
+  }
+
+  // Botón de WhatsApp a la derecha
+  .btn-whatsapp {
+    position: absolute;
+    right: 20px;
+    bottom: 20px;
+
+    img {
+      width: 45px;
+      transition: transform 0.2s ease;
+
+      &:hover {
+        transform: scale(1.1);
       }
     }
   }
@@ -279,7 +303,6 @@ footer {
    
 
     &:hover {
-      transform: scale(1.15);
     }
   }
 }
