--- a/css/main/css.css
+++ b/css/main/css.css
@@ -396,4 +396,4 @@ footer .redes a img:hover {
   animation: saludo-footer 1.5s ease-in-out;
 }
 
-/*# sourceMappingURL=main.css.map */
+/*# sourceMappingURL=css.css.map */
